HWS-627
Add IO Metrics on GPU and Network using direction as specified by hardware metrics semconv